--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -111,3 +111,14 @@
     display: block;
     border-radius: var(--lz-rounded-md);
 }
+
+/* start hidden off-screen right */
+.navbar-collapse {
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+/* when this class is on, menu is full-screen and visible */
+.navbar-collapse.open {
+  transform: translateX(0);
+}
